Modify swagger tag
